daemon: Don't leak the provider when coalescing EnsureCredential calls

https://bugzilla.gnome.org/show_bug.cgi?id=765121